--- a/src/main/webapp/app/entities/task/task-update.component.html
+++ b/src/main/webapp/app/entities/task/task-update.component.html
@@ -25,6 +25,11 @@
                            formControlName="description"/>
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="taskUniteApp.task.price" for="field_price">Price</label>
+                    <input type="number" class="form-control" name="price" id="field_price"
+                           formControlName="price"/>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="taskUniteApp.task.totalPrice" for="field_totalPrice">Total Price</label>
                     <input type="number" class="form-control" name="totalPrice" id="field_totalPrice"
                            formControlName="totalPrice"/>
@@ -90,10 +95,10 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="taskUniteApp.task.taskerCategory" for="field_taskerCategory">Tasker Category</label>
-                    <select class="form-control" id="field_taskerCategory" name="taskerCategory" formControlName="taskerCategoryId">
+                    <label class="form-control-label" jhiTranslate="taskUniteApp.task.taskCategory" for="field_taskCategory">Task Category</label>
+                    <select class="form-control" id="field_taskCategory" name="taskCategory" formControlName="taskCategoryId">
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="taskerCategoryOption.id" *ngFor="let taskerCategoryOption of taskercategories; trackBy: trackTaskerCategoryById">{{taskerCategoryOption.id}}</option>
+                        <option [ngValue]="taskCategoryOption.id" *ngFor="let taskCategoryOption of taskcategories; trackBy: trackTaskCategoryById">{{taskCategoryOption.id}}</option>
                     </select>
                 </div>
             </div>
