--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -21,7 +21,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 text-center" data-aos="fade">
-                    <h1>Không cần phải tự tay hoàn thành hết mọi công việc</h1>
+                    <h1 class="mb-5">Không cần tự tay hoàn thành công việc</h1>
+                    <a th:href="@{/task/create/step1}">
+                        <span class="bg-primary text-white py-3 px-4 rounded">
+                            <span>Yêu cầu việc ngay!</span>
+                        </span>
+                    </a>
                 </div>
             </div>
         </div>
