--- a/src/main/resources/templates/task/create/step3.html
+++ b/src/main/resources/templates/task/create/step3.html
@@ -4,10 +4,7 @@
     <title>Create Task</title>
     <th:block th:include="fragment/layout :: head"></th:block>
     <link rel="stylesheet" th:href="@{~/css/task/create.css}">
-<<<<<<< HEAD
     <link rel="stylesheet" th:href="@{~/css/responsive/task/create.css}">
-=======
->>>>>>> e765a2a4ecb9e0f446e2e45473de1f22683aae75
 </head>
 <body>
 
@@ -25,9 +22,9 @@
                             <div class="row mt-2">
                             <div class="col-lg-7 p-0">
                                 <div class="recommendations__tasker_schedule_modal_tasker">
-                                    <img th:src="${taskInfo.tasker.user.user.imageUrl}"
+                                    <img th:src="${taskInfo.getTasker().getImage()}"
                                          alt="Mahendra B.">
-                                    <div><span th:text="${taskInfo.tasker.user.user.firstName  + ' ' + taskInfo.tasker.user.user.lastName}">Trần Hiểu Đông</span></div>
+                                    <div><span th:text="${taskInfo.getTasker().getUser().getLastName()  + ' ' + taskInfo.getTasker().getUser().getFirstName()}"></span></div>
                                 </div>
                                 <div class="border-right box-date">
                                     <div class="calendar__container">
