--- a/src/main/resources/templates/task/create/step4.html
+++ b/src/main/resources/templates/task/create/step4.html
@@ -94,10 +94,10 @@
                                 </div>
                                 <div class="col-lg-10 col-sm-9 col-9">
                                     <div class="task-name text-bold" style="font-size: 18px">
-                                        Công việc nhà
+                                        <span th:text="${taskInfo.getTaskCategory().getName()}"></span>
                                     </div>
                                     <div class="tasker-name mt-1">
-                                        Trần Hiểu Đông
+                                        <span th:text="${taskInfo.getTasker().getUser().getLastName() + ' ' + taskInfo.getTasker().getUser().getFirstName()}"></span>
                                     </div>
                                 </div>
                             </div>
@@ -105,13 +105,13 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <span class="icon-calendar-o mr-lg-3"></span>
-                                    <span>22 - T11, 8:30 </span>
+                                    <span th:text="${taskInfo.getFrom().toString()}"></span>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <span class="icon-room mr-lg-3"></span>
-                                    <span>Hà Nội - Từ Liêm </span>
+                                    <span th:text="${taskInfo.getAddress()}"></span>
                                 </div>
                             </div>
                             <div style="height: 1px;background: #dadada" class="my-3"></div>
@@ -119,7 +119,7 @@
                                 <div class="col-lg-7 col-md-12 text-bold t-20"
                                      th:text="#{task-create.step4.price-vnd-hour}"></div>
                                 <div class="col-lg-5 col-md-12 t-20 t-green">
-                                    80.000 vnđ/1h
+                                     <span th:text="${taskInfo.getPrice()}"></span>
                                 </div>
                             </div>
                             <div class="my-3 t-14">
