--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -48,13 +48,13 @@
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
                             <div class="col-12 text-center">
-                                <h2 th:text="${user.getFirstName()} + ' ' + ${user.getLastName()}"></h2>
+                                <h2 th:text="${user.getLastName()} + ' ' + ${user.getFirstName()}"></h2>
                             </div>
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
                         <div class="row">
                             <div class="col-12 text-center">
-                                <strong></strong>
+                                <strong th:each="authority: ${authorities}" th:text="${authority.getName()}"></strong>
                             </div>
                         </div>
                         <div style="height: 1px;background: #dadada" class="my-3"></div>
@@ -79,26 +79,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-8 mb-3" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-12 col-lg-8 mb-3 block-16" data-aos="fade-up" data-aos-delay="200">
                     <div class="nonloop-block-profile owl-carousel">
 
                         <div class="border rounded p-4 bg-white">
                             <label class="font-weight-bold">Tài khoản</label>
                             <h3 class="mb-5">VND <span th:text="${#numbers.formatDecimal(payment.getBalance().intValue(), 0, 'COMMA', 0, 'POINT')}"></span> </h3>
-                            <div class="text-center">
+
                                 <button class="btn btn-primary py-2 px-5 mx-1">Nạp</button>
                                 <button class="btn btn-warning py-2 px-5 text-white mx-1">Rút</button>
-                            </div>
+
                         </div>
 
                         <div class="border rounded p-4 bg-white">
-                            <label class="font-weight-bold">Đánh giá & Phân loại</label>
+                            <label class="font-weight-bold">Đánh giá</label>
                             <span class="border border-warning rounded p-1 px-2 text-warning">Beta</span>
-                            <p>
-                                    <span class="d-block"><span
-                                        class="icon-money mr-1"></span> <span
-                                        class="icon-star mr-1"></span></span>
-                            </p>
+                            <h3 class="mb-5"><span class="icon-star"></span> <span>6</span> </h3>
                             <p class="mb-0">Bạn đang làm rất tốt!</p>
                         </div>
 
@@ -106,7 +102,7 @@
                             <label class="font-weight-bold">Tiến độ</label>
                             <h3 class="mb-5">LVL <span th:text="${statistic.getLevel()}"></span></h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width:0%"></div>
+                                <div class="progress-bar" th:style="'width:' + ${statistic.getExperience()} + '%'"></div>
                             </div>
                             <p class="mb-3">Còn <span th:text="${100 - statistic.getExperience()}"></span> tới cấp tiếp theo</p>
                             <label class="font-weight-bold">Quyền lợi</label>&nbsp;&nbsp;<small>Cấp càng cao, bạn
@@ -115,26 +111,14 @@
                             <p class="mb-0">Bạn thuộc hàng chờ ưu tiên <strong>cao</strong></p>
                         </div>
 
-                        <!--                            <div class="border rounded p-4 bg-white">-->
-                        <!--                                <h2 class="h5">Telecommunication Manager</h2>-->
-                        <!--                                <p><span class="border border-warning rounded p-1 px-2 text-warning">Freelance</span>-->
-                        <!--                                </p>-->
-                        <!--                                <p>-->
-                        <!--                                    <span class="d-block"><span class="icon-suitcase"></span> Resto Bar</span>-->
-                        <!--                                    <span class="d-block"><span class="icon-room"></span> Florida</span>-->
-                        <!--                                    <span class="d-block"><span-->
-                        <!--                                        class="icon-money mr-1"></span> $55000 &mdash; 70000</span>-->
-                        <!--                                </p>-->
-                        <!--                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid at-->
-                        <!--                                    ipsum commodi hic, cum esse asperiores libero molestiae, perferendis consectetur-->
-                        <!--                                    assumenda iusto, dolorem nemo maiores magnam illo laborum sit, dicta.</p>-->
-                        <!--                            </div>-->
-
                     </div>
                     <div style="margin: 15px 0 0 0" class="panel panel--spaced panel--with-overflow tab-content"
                          id="v-pills-tabContent">
                         <div class="tab-pane fade show active row" id="v-pills-home" role="tabpanel"
                              aria-labelledby="v-pills-home-tab">
+                            <div class="col-md-12 mb-3">
+                                <label class="font-weight-bold">Thông tin cá nhân</label>
+                            </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="fname">Họ: </label>
                                 <span id="fname" th:text="${user.getLastName()}"></span>
@@ -162,20 +146,14 @@
                         </div>
                         <div class="tab-pane fade row" id="v-pills-profile" role="tabpanel"
                              aria-labelledby="v-pills-profile-tab">
+                            <div class="col-md-12 mb-3">
+                                <label class="font-weight-bold">Tiến độ</label>
+                            </div>
                             <div class="col-md-12">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" th:style="'width:' + ${statistic.getCompletedTask()} + '%'"></div>
                             </div>
                                 <p class="mb-3">Đã hoàn thành: <strong><span th:text="${statistic.getCompletedTask()}"></span>/100</strong> công việc trong tháng</p>
-
-                            </div>
-                            <div class="col-md-12">
-                            <div class="progress">
-                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-
-                            </div>
-                            <p class="mb-3">Chưa hoàn thành: <strong><span th:text="${statistic.getIncompletedTask()}"></span></strong> công việc trong tháng</p>
                             </div>
                             <div class="col-md-12">
                                 <label class="font-weight-bold" for="exp">EXP nhận được: </label>
@@ -184,16 +162,22 @@
                         </div>
                         <div class="tab-pane fade  row" id="v-pills-messages" role="tabpanel"
                              aria-labelledby="v-pills-messages-tab">
+                            <div class="col-md-12 mb-3">
+                                <label class="font-weight-bold">Tiếp thị liên kết</label>
+                            </div>
                             <div class="col-md-12">
                                 <p class="mb-3">Chương trình đang được phát triển thêm. Cảm ơn <3</p>
                             </div>
                         </div>
                         <div class="tab-pane fade row" id="v-pills-settings" role="tabpanel"
                              aria-labelledby="v-pills-settings-tab">
+                            <div class="col-md-12 mb-3">
+                                <label class="font-weight-bold">Cài đặt</label>
+                            </div>
                             <div class="col-md-12">
                                 <div id="accordion">
                                     <div class="card">
-                                        <div class="card-header" id="headingOne">
+                                        <div class="card-header" style="padding: 0" id="headingOne">
                                             <h5 class="mb-0">
                                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                                     Thông báo
@@ -213,7 +197,7 @@
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <div class="card-header" id="headingTwo">
+                                        <div class="card-header" id="headingTwo" style="padding: 0">
                                             <h5 class="mb-0">
                                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                                     Ngôn ngữ
